# OpenLucid

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  SECURITY.md  SELF_HOSTING.md  SELF_HOSTING_zh.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
app/: cli.py  config.py  exceptions.py  main.py  mcp_cli.py  mcp_server.py
docker/: .env.example  docker-compose.yml  install.bat  install.sh  upgrade.bat  upgrade.sh
frontend/: account.html  apps.html  brandkit-list.html  brandkit.html  content-studio.html  creations.html  index.html  install.html  kb-qa.html  offer.html  script-writer.html  setting.html  signin.html  strategy-unit.html  topic-studio.html  video-studio.html
scripts/: smoke_video_adapters.py
tests/: conftest.py  test_ai_adapter_language.py  test_app_url_status.py  test_assets.py  test_auth_sentinels.py  test_brandkit_primary_sort.py  test_broll_references.py  test_cache_bust.py  test_chanjing_pagination.py  test_chanjing_tags.py  test_context.py  test_coverage_offer_field_fallback.py  test_cross_provider_tagging.py  test_extract_normalize.py  test_extract_shared.py  test_get_knowledge_inference_prompt.py  test_guest_access.py  test_health.py  test_jogg_pagination.py  test_knowledge.py  test_knowledge_inference_service.py  test_knowledge_upsert_unique.py  test_lang_detect.py  test_mcp.py  test_mcp_create_offer_infer.py  test_mcp_dispatcher.py  test_mcp_unify.py  test_media_provider_resilience.py  test_merchants.py  test_offers.py  test_openlucid_cli.py  test_parsers.py  (+8 more)
(+225 files in other folders)
