[project]
name = "openlucid"
version = "0.8.1"
description = "AI Director Platform - Merchant-facing multimodal knowledge and content planning engine"
requires-python = ">=3.11"

[project.scripts]
openlucid-mcp = "app.mcp_cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
